<resources>
    <string name="app_name">A2</string>
    <string name="manager">MANAGER</string>
    <string name="buy">BUY</string>
    <string name="product_type">Product Type</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="restock">Restock</string>
    <string name="history">History</string>
    <string name="historyProduct">\Product: %s\</string>
    <string name="historyPrice">\Price: %.2f\</string>
    <string name="historyDate">\Date: %s\</string>
    <string name="dollarValue">\$%.2f\</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="thankyou">\Thank you for your purchase of %d %s\</string>
    <string name="add_quantity">Add Quantity</string>
</resources>