<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/prodTypeText"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:text="@string/product_type"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/managerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:text="@string/total"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantityText"
        app:layout_constraintTop_toBottomOf="@+id/prodTypeText" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="183dp"
        android:layout_height="109dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:id="@+id/quantityText"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:text="@string/quantity"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodTypeText" />

    <NumberPicker
        android:id="@+id/quantityPicker"
        android:layout_width="70dp"
        android:layout_height="151dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buyButton"
        app:layout_constraintEnd_toStartOf="@+id/quantityText"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodTypeText" />

    <ListView
        android:id="@+id/productList"
        android:layout_width="369dp"
        android:layout_height="103dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/prodTypeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>