<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restock">

    <EditText
        android:id="@+id/restockNumber"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/add_quantity"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/restockListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/restockOkay"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toTopOf="@+id/restockListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restockNumber"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/restockCancel"
        android:layout_width="122dp"
        android:layout_height="55dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/restockListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restockNumber"
        app:layout_constraintVertical_bias="0.454" />

    <ListView
        android:id="@+id/restockListView"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>